tests/trybuild-failures/testify_not_binary_expression.stderr
error: proc macro panicked
 --> $DIR/testify_not_binary_expression.rs:3:1
  |
3 | testify!(foo_test, "foo");
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: not a binary expression, e.g. 1 == 1
